--- a/src/app/login/login-scss/base/_typography.scss
+++ b/src/app/login/login-scss/base/_typography.scss
@@ -31,3 +31,9 @@ h5 {
   font-weight: 500;
   font-style: normal;
 }
+.danger {
+  text-align: left;
+  padding-bottom: 10px;
+  color: maroon;
+  font-size: 1rem;
+}
