--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,6 +2,6 @@
 
 @import "./login-scss/base/typography";
 
-@import "./login-scss/components/button.scss";
+@import "./login-scss/components/button";
 
 @import "./login-scss/pages/home";
