--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,6 +3,7 @@
   <div class="p-d-flex p-jc-between">
     <div>
       <h4 (click)="visibleSidebar1 = true" class="text-tasklist">Task List</h4>
+      &nbsp;&nbsp;
       <a
         class="header__btn"
         routerLinkActive="active"
@@ -24,19 +25,4 @@
 </header>
 <div class="p-d-flex p-jc-center">
   <app-sharedlist [selectedListName]="selectedList"></app-sharedlist>
-</div>
-
-<div *ngIf="selectedList === 'bussiness'">
-  <p-sidebar [(visible)]="visibleSidebar1" [baseZIndex]="1000">
-    <h3 class="sidebar" (click)="onSaveBussiness()">Save Data</h3>
-    <hr class="line" />
-    <h3 class="sidebar" (click)="onFetch()">Fetch Data</h3>
-  </p-sidebar>
-</div>
-<div *ngIf="selectedList === 'personal'">
-  <p-sidebar [(visible)]="visibleSidebar1" [baseZIndex]="1000">
-    <h3 class="sidebar" (click)="onSavePersonal()">Save Data</h3>
-    <hr class="line" />
-    <h3 class="sidebar" (click)="onFetch()">Fetch Data</h3>
-  </p-sidebar>
 </div>
