--- a/src/app/login/login-scss/pages/_home.scss
+++ b/src/app/login/login-scss/pages/_home.scss
@@ -1,6 +1,6 @@
 // VISWA YADEEDYA
 .container {
-  height: 94.6%;
+  height: 100vh;
   &__login {
     background-color: $color-white;
     border-radius: $value-10px;
